refactor: 팀 생성, 조회(단 건, 전체)기능 구현